--- a/style.css
+++ b/style.css
@@ -1,4 +1,57 @@
 body{
     background-color: black;
-    color: orange;
+    
+}
+.container{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+input {
+    height: 20px;
+    width: 80px;
+}
+h2{
+    color: black;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+button{
+    background-color:black;
+    border-radius: 5px;
+    color: white;
+}
+.container-input{
+    display: flex;
+    align-items: center;
+    width: 300px;
+    height: 150px;
+    background-color: orange;
+    border-radius: 4px;
+    flex-direction: column;
+    gap: 5px;
+}
+#pizza-container{
+    gap: 10px;
+    display: flex;
+    flex-direction: column;
+}
+#pizza-container2{
+    background: #ff2600;
+    color: rgb(226, 226, 226);
+    border-radius: 8px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 20px 30px;
+    box-shadow: rgb(0, 0, 0) 0px 5px 15px;
+    gap:10px;
+}
+#form-list{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 10px;
 }
