--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *{font-family:font;}
 body{
-    background-color: black;
+    background-image:url(./assets/pizza.jpg);
     
 }
 @font-face {
@@ -26,12 +26,19 @@ button{
     border-radius: 5px;
     color: white;
 }
+img{
+    width:200px;
+    height: 200px;
+}
+.container{
+    padding: 10px;
+}
 .container-input{
     display: flex;
     align-items: center;
     width: 300px;
     height: 150px;
-    background-color: orange;
+    background-color: rgb(255, 255, 255);
     border-radius: 4px;
     flex-direction: column;
     gap: 5px;
@@ -40,15 +47,22 @@ button{
     gap: 10px;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 500px;
+    background-color: rgba(0, 0, 0, 0.993);
+    border-radius: 5px;
+    padding: 10px;
 }
 #pizza-container2{
-    background: #ff2600;
+    background: #f80202;
     color: rgb(226, 226, 226);
     border-radius: 8px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
+    flex-direction: column;
+    width: 300px;
     padding: 20px 30px;
     box-shadow: rgb(0, 0, 0) 0px 5px 15px;
     gap:10px;
@@ -59,4 +73,32 @@ button{
     align-items: center;
     flex-direction: column;
     gap: 10px;
+}
+h2{
+    font-size: 12px;
+}
+h3{
+    font-size: 12px;
+}
+.pizza-container-renders{
+    display: flex;
+    justify-content: center;
+}
+.pizza-error{
+    width: 300px;
+    height: 300px;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.pizza-error-id{
+    width: 300px;
+    height: 300px;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
